# python-best-practices-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  pyproject.toml
